# otfft

./: .gitignore  CMakeLists.txt  README.txt  conanfile.py
benchmark/: benchmark.cpp
include/otfftpp/: otfft.h  otfft_avxdif16.h  otfft_avxdif4.h  otfft_avxdif8.h  otfft_avxdit16.h  otfft_avxdit4.h  otfft_avxdit8.h  otfft_complex.h  otfft_eightstep.h  otfft_misc.h  otfft_mixedradix.h  otfft_sixstep.h  otfft_sixstepsq.h
src/: otfftpp.cpp
test/: CMakeLists.txt  otfft_basic_test.cpp  otfft_bluestein_test.cpp  otfft_dct_test.cpp  otfft_find_peak_test.cpp  otfft_optimization_test.cpp  otfft_test_utils.h  otfft_transform_test.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
